--- a/app.json
+++ b/app.json
@@ -25,6 +25,12 @@
     },
     "web": {
       "favicon": "./assets/favicon.png"
-    }
+    },
+    "extra": {
+      "eas": {
+        "projectId": "3b74dec1-2e59-4243-b738-1cbaa9168313"
+      }
+    },
+    "owner": "daviddecorso"
   }
 }
